--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -8,7 +8,7 @@
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate local:Flyuot2}"
         Route="MainPage" />
 
 </Shell>
