--- a/Views/Add_track.xaml
+++ b/Views/Add_track.xaml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SoundScribe.Add_track"
+             x:Class="SoundScribe.Views.Add_track"
              Title="Add_track">
     <StackLayout>
         <Label Text="Artist" />
         <Entry Text="{Binding Artist}" />
         <Label Text="Song Name" />
         <Entry Text="{Binding  Song_Name}" />
+        <!-- 
         <Label Text="Rhymes" />
         <Entry Text="{Binding Rhymes}" />
         <Label Text="Structure" />
@@ -20,6 +21,7 @@
         <Entry Text="{Binding Atmosphere}" />
         <Label Text="Trendiness" />
         <Entry Text="{Binding Trendiness}" />
+        Cool comment -->
         <StackLayout Orientation="Horizontal">
             <Button Text="Coхранить" Clicked="SaveFriend" />
             <Button Text="Удалить" Clicked="DeleteFriend" />
