--- a/Views/Leaderboard.xaml
+++ b/Views/Leaderboard.xaml
@@ -1,15 +1,14 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SoundScribe.Views.Leaderboard"
              Title="Leaderboard">
     <StackLayout>
-        <ListView ItemsSource="{Binding Songs2}" ItemSelected="OnItemSelected">
+        <ListView x:Name="SongsListView" ItemsSource="{Binding Songs2}" ItemSelected="OnItemSelected">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
                         <StackLayout Orientation="Horizontal">
-                            <Image Source="{Binding Image}"></Image>
+                            <Image Source="{Binding Image}" WidthRequest="50" HeightRequest="50"/>
                             <Label Text="{Binding Artist}" />
                             <Label Text=" " />
                             <Label Text="{Binding Song_Name}" />
