--- a/Views/Add_track.xaml
+++ b/Views/Add_track.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SoundScribe.Views.Add_track"
-             Title="Add_track">
+             Title="Add_track"
+             BackgroundImageSource="church_1.png">
     <StackLayout>
         <Label Text="Artist" />
         <Entry Text="{Binding Artist}" />
