--- a/Views/Leaderboard.xaml
+++ b/Views/Leaderboard.xaml
@@ -1,7 +1,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SoundScribe.Views.Leaderboard"
-             Title="Leaderboard">
+             Title="Leaderboard" 
+             BackgroundImageSource="church_1.png">
     <StackLayout>
         <ListView x:Name="SongsListView" ItemsSource="{Binding Songs2}" ItemSelected="OnItemSelected">
             <ListView.ItemTemplate>
