--- a/Views/Tracklist.xaml
+++ b/Views/Tracklist.xaml
@@ -1,56 +1,1 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SoundScribe.Views.Tracklist"
-             Title="Tracklist"
-             BackgroundImageSource="church_1.png">
-    <StackLayout>
-        <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-            <Label Text="Tracklist" FontSize="46" TextColor="#FFFFFF"/>
-        </StackLayout>
-        <ListView x:Name="SongList" ItemsSource="{Binding}" ItemSelected="OnItemSelected">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <ViewCell.View>
-                            <AbsoluteLayout>
-                                <Frame
-                                    AbsoluteLayout.LayoutBounds="0.5, 0.8, 0.99, 1"
-                                    AbsoluteLayout.LayoutFlags="All"
-                                    BackgroundColor="#2A2A2A"
-                                    CornerRadius="60"
-                                    HasShadow="False" 
-                                    Padding="0" />
-                                <StackLayout Orientation="Horizontal">
-                                    <Frame 
-                                        CornerRadius="60" 
-                                        Margin="5, 0, 5, 0" 
-                                        WidthRequest="50" 
-                                        HeightRequest="50">
-                                        <Image Source = "{Binding Image}" WidthRequest="50" HeightRequest="50"/>
-                                    </Frame>
-                                    <Frame
-                                        WidthRequest="50" 
-                                        HeightRequest="50"
-                                        HasShadow="False"
-                                        Margin="5"
-                                        BackgroundColor="#2A2A2A">
-                                        <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF"/>
-                                    </Frame>
-                                    <Frame
-                                        WidthRequest="50" 
-                                        HeightRequest="50"
-                                        HasShadow="False"
-                                        Margin="5"
-                                        BackgroundColor="#2A2A2A">
-                                        <Label Text="{Binding Artist}" FontSize="Medium" TextColor="#FFFFFF" Opacity="0.56"/>
-                                    </Frame>
-                                </StackLayout>
-                            </AbsoluteLayout>
-                        </ViewCell.View>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </StackLayout>
-</ContentPage>
+<?xml version="1.0" encoding="utf-8" ?> <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"              x:Class="SoundScribe.Views.Tracklist"              Title="Tracklist"              BackgroundImageSource="church_1.png">     <StackLayout>         <StackLayout HorizontalOptions="Center" VerticalOptions="Center">             <Label Text="Tracklist" FontSize="46" TextColor="#FFFFFF"/>         </StackLayout>         <ListView x:Name="SongList" ItemsSource="{Binding}" ItemSelected="OnItemSelected">             <ListView.ItemTemplate>                 <DataTemplate>                     <ViewCell>                         <ViewCell.View>                             <AbsoluteLayout>                                 <Frame                                     AbsoluteLayout.LayoutBounds="0.5, 0.8, 0.99, 1"                                     AbsoluteLayout.LayoutFlags="All"                                     BackgroundColor="#2A2A2A"                                     CornerRadius="60"                                     HasShadow="False"                                      Padding="0" />                                 <StackLayout Orientation="Horizontal">                                     <Frame                                          CornerRadius="60"                                          Margin="5, 0, 5, 0"                                          WidthRequest="50"                                          HeightRequest="50">                                         <Image Source = "{Binding Image}" WidthRequest="50" HeightRequest="50"/>                                     </Frame>                                     <Frame                                         WidthRequest="50"                                          HeightRequest="50"                                         HasShadow="False"                                         Margin="5"                                         BackgroundColor="#2A2A2A">                                         <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF"/>                                     </Frame>                                     <Frame                                         WidthRequest="50"                                          HeightRequest="50"                                         HasShadow="False"                                         Margin="5"                                         BackgroundColor="#2A2A2A">                                         <Label Text="{Binding Artist}" FontSize="Medium" TextColor="#FFFFFF" Opacity="0.56"/>                                     </Frame>                                 </StackLayout>                             </AbsoluteLayout>                         </ViewCell.View>                     </ViewCell>                 </DataTemplate>             </ListView.ItemTemplate>         </ListView>     </StackLayout> </ContentPage>
