--- a/Views/Leaderboard.xaml
+++ b/Views/Leaderboard.xaml
@@ -4,17 +4,59 @@
              Title="Leaderboard" 
              BackgroundImageSource="church_1.png">
     <StackLayout>
+        <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+            <Label Text="LeaderBoard " FontSize="46" TextColor="#FFFFFF"/>
+        </StackLayout>
         <ListView x:Name="SongsListView" ItemsSource="{Binding Songs2}" ItemSelected="OnItemSelected">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
-                        <StackLayout Orientation="Horizontal">
-                            <Image Source="{Binding Image}" WidthRequest="50" HeightRequest="50"/>
-                            <Label Text="{Binding Artist}" />
-                            <Label Text=" " />
-                            <Label Text="{Binding Song_Name}" />
-                            <Label Text="{Binding C}" />
-                        </StackLayout>
+                        <AbsoluteLayout>
+                            <Frame
+                                AbsoluteLayout.LayoutBounds="0.2, 0.1, 0.98, 1"
+                                AbsoluteLayout.LayoutFlags="All"
+                                BackgroundColor="#2A2A2A"
+                                CornerRadius="60"
+                                HasShadow="False" 
+                                Padding="0"
+                                Margin="5"
+                                HeightRequest="120"/>
+                            <StackLayout Orientation="Horizontal" Padding="5">
+                                <StackLayout Orientation="Horizontal">
+                                    <Frame 
+                                        CornerRadius="60" 
+                                        Margin="10, -50, 5, 0" 
+                                        WidthRequest="40" 
+                                        HeightRequest="40">
+                                        <Image Source="{Binding Image}" WidthRequest="50" HeightRequest="50"/>
+                                    </Frame>
+                                    <Frame
+                                        HeightRequest="100"
+                                        HasShadow="False"
+                                        Margin="0, -18, 0, 0"
+                                        BackgroundColor="#2A2A2A">
+                                        <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF"/>
+                                    </Frame>
+                                    <Frame
+                                        HeightRequest="100"
+                                        WidthRequest="100"
+                                        HasShadow="False"
+                                        Margin="0, -13, 0, 0"
+                                        BackgroundColor="#2A2A2A">
+                                        <Label Text="{Binding Artist}" FontSize="Small" TextColor="#FFFFFF" Opacity="0.56"/>
+                                    </Frame>
+                                    <Label Text=" " />
+                                    <Frame
+                                        HeightRequest="100"
+                                        WidthRequest="80"
+                                        HasShadow="False"
+                                        Margin="-10, -15, 0, 0"
+                                        BackgroundColor="#2A2A2A">
+                                        <Label Text="{Binding C}" FontSize="Medium" TextColor="#FFFFFF"/>
+                                    </Frame>
+                                </StackLayout>
+                            </StackLayout>
+                        </AbsoluteLayout>
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
