--- a/Views/Flyuot2.xaml
+++ b/Views/Flyuot2.xaml
@@ -30,22 +30,51 @@
                         </Grid.ColumnDefinitions>
 
                         <StackLayout Grid.Row="0" Grid.Column="0" Orientation="Horizontal">
-                            <Entry x:Name="song_search" TextChanged="OnSearchTextChanged" />
+                            <Entry x:Name="song_search" Text="Search..." TextChanged="OnSearchTextChanged" WidthRequest="390"/>
                         </StackLayout>
 
                         <StackLayout Grid.Row="1" Grid.Column="0">
+                            <Label Text="Tracklist: " FontSize="46" TextColor="#FFFFFF" HorizontalOptions="Center"></Label>
                             <ListView x:Name="SongList" ItemsSource="{Binding Songs2}" ItemSelected="OnItemSelected">
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
                                         <ViewCell>
                                             <ViewCell.View>
-                                                <StackLayout Orientation="Vertical">
-                                                    <StackLayout Orientation="Horizontal">
-                                                        <Image Source="{Binding Image}" WidthRequest="50" HeightRequest="50" />
-                                                        <Label Text="{Binding Artist}" FontSize="Medium" />
+                                                <AbsoluteLayout>
+                                                    <Frame
+                                                        AbsoluteLayout.LayoutBounds="0.2, 0.1, 0.98, 1"
+                                                        AbsoluteLayout.LayoutFlags="All"
+                                                        BackgroundColor="#2A2A2A"
+                                                        CornerRadius="60"
+                                                        HasShadow="False" 
+                                                        Padding="0"
+                                                        Margin="10, 0, 10, 0"
+                                                        HeightRequest="100"/>
+                                                    <StackLayout Orientation="Horizontal" Padding="5">
+                                                        <Frame 
+                                                            CornerRadius="60" 
+                                                            Margin="10, -50, 5, 0" 
+                                                            WidthRequest="40" 
+                                                            HeightRequest="40">
+                                                            <Image Source = "{Binding Image}" WidthRequest="50" HeightRequest="50"/>
+                                                        </Frame>
+                                                        <Frame
+                                                            HeightRequest="100"
+                                                            HasShadow="False"
+                                                            Margin="0, -18, 0, 0"
+                                                            BackgroundColor="#2A2A2A">
+                                                            <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF"/>
+                                                        </Frame>
+                                                        <Frame
+                                                            HeightRequest="100"
+                                                            WidthRequest="100"
+                                                            HasShadow="False"
+                                                            Margin="0, -13, 0, 0"
+                                                            BackgroundColor="#2A2A2A">
+                                                            <Label Text="{Binding Artist}" FontSize="Small" TextColor="#FFFFFF" Opacity="0.56"/>
+                                                        </Frame>
                                                     </StackLayout>
-                                                    <Label Text="{Binding Song_Name}" FontSize="Medium" />
-                                                </StackLayout>
+                                                </AbsoluteLayout>
                                             </ViewCell.View>
                                         </ViewCell>
                                     </DataTemplate>
@@ -54,33 +83,102 @@
                         </StackLayout>
 
                         <StackLayout Grid.Row="2" Grid.Column="0">
+                            <Label Text="Last Song: " FontSize="46" TextColor="#FFFFFF" HorizontalOptions="Center"></Label>
                             <ListView ItemsSource="{Binding Last}" ItemSelected="OnItemSelected">
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
                                         <ViewCell>
-                                            <Label Text="Last Song:"></Label>
-                                            <StackLayout Orientation="Horizontal">
-                                                <Image Source="{Binding Image}" />
-                                                <Label Text="{Binding Artist}" />
-                                                <Label Text=" " />
-                                                <Label Text="{Binding Song_Name}" />
-                                            </StackLayout>
+                                            <AbsoluteLayout>
+                                                <Frame
+                                                    AbsoluteLayout.LayoutBounds="0.2, 0.1, 0.98, 1"
+                                                    AbsoluteLayout.LayoutFlags="All"
+                                                    BackgroundColor="#2A2A2A"
+                                                    CornerRadius="60"
+                                                    HasShadow="False" 
+                                                    Padding="0"
+                                                    Margin="10, 0, 10, 0"
+                                                    HeightRequest="100"/>
+                                                <StackLayout Orientation="Horizontal" Padding="5">
+                                                    <Frame 
+                                                        CornerRadius="60" 
+                                                        Margin="10, -50, 5, 0" 
+                                                        WidthRequest="40" 
+                                                        HeightRequest="40">
+                                                        <Image Source = "{Binding Image}" WidthRequest="50" HeightRequest="50"/>
+                                                    </Frame>
+                                                    <Frame
+                                                        HeightRequest="100"
+                                                        HasShadow="False"
+                                                        Margin="0, -18, 0, 0"
+                                                        BackgroundColor="#2A2A2A">
+                                                        <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF"/>
+                                                    </Frame>
+                                                    <Frame
+                                                        HeightRequest="100"
+                                                        WidthRequest="100"
+                                                        HasShadow="False"
+                                                        Margin="0, -13, 0, 0"
+                                                        BackgroundColor="#2A2A2A">
+                                                        <Label Text="{Binding Artist}" FontSize="Small" TextColor="#FFFFFF" Opacity="0.56"/>
+                                                    </Frame>
+                                                </StackLayout>
+                                            </AbsoluteLayout>
                                         </ViewCell>
                                     </DataTemplate>
                                 </ListView.ItemTemplate>
                             </ListView>
+
+                            <Label Text="Best Song: " FontSize="46" TextColor="#FFFFFF" HorizontalOptions="Center"></Label>
                             <ListView ItemsSource="{Binding Song}" ItemSelected="OnItemSelected">
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
                                         <ViewCell>
-                                            <Label Text="Best Song:"></Label>
-                                            <StackLayout Orientation="Horizontal">
-                                                <Image Source="{Binding Image}" />
-                                                <Label Text="{Binding Artist}" />
-                                                <Label Text=" " />
-                                                <Label Text="{Binding Song_Name}" />
-                                                <Label Text="{Binding C}" />
-                                            </StackLayout>
+                                            <AbsoluteLayout>
+                                                <Frame
+                                                    AbsoluteLayout.LayoutBounds="0.2, 0.1, 0.98, 1"
+                                                    AbsoluteLayout.LayoutFlags="All"
+                                                    BackgroundColor="#2A2A2A"
+                                                    CornerRadius="60"
+                                                    HasShadow="False" 
+                                                    Padding="0"
+                                                    Margin="5"
+                                                    HeightRequest="120"/>
+                                                <StackLayout Orientation="Horizontal" Padding="5">
+                                                    <StackLayout Orientation="Horizontal">
+                                                        <Frame 
+                                                            CornerRadius="60" 
+                                                            Margin="10, -50, 5, 0" 
+                                                            WidthRequest="40" 
+                                                            HeightRequest="40">
+                                                            <Image Source="{Binding Image}" WidthRequest="50" HeightRequest="50"/>
+                                                        </Frame>
+                                                        <Frame
+                                                            HeightRequest="100"
+                                                            HasShadow="False"
+                                                            Margin="0, -18, 0, 0"
+                                                            BackgroundColor="#2A2A2A">
+                                                            <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF"/>
+                                                        </Frame>
+                                                        <Frame
+                                                            HeightRequest="100"
+                                                            WidthRequest="100"
+                                                            HasShadow="False"
+                                                            Margin="0, -13, 0, 0"
+                                                            BackgroundColor="#2A2A2A">
+                                                            <Label Text="{Binding Artist}" FontSize="Small" TextColor="#FFFFFF" Opacity="0.56"/>
+                                                        </Frame>
+                                                        <Label Text=" " />
+                                                        <Frame
+                                                            HeightRequest="100"
+                                                            WidthRequest="80"
+                                                            HasShadow="False"
+                                                            Margin="-10, -15, 0, 0"
+                                                            BackgroundColor="#2A2A2A">
+                                                            <Label Text="{Binding C}" FontSize="Medium" TextColor="#FFFFFF"/>
+                                                        </Frame>
+                                                    </StackLayout>
+                                                </StackLayout>
+                                            </AbsoluteLayout>
                                         </ViewCell>
                                     </DataTemplate>
                                 </ListView.ItemTemplate>
